# rerun_template

./: .gitignore  .mypy.ini  CMakeLists.txt  Cargo.toml  Cranky.toml  README.md  RELEASES.md  clippy.toml  deny.toml  generate_changelog.py  lychee.toml  pixi.toml  pyproject.toml  requirements.txt  rust-toolchain
.github/workflows/: cargo_shear.yml  cpp.yml  labels.yml  links.yml  python.yml  rust.yml  typos.yml
crates/new_project_name/: Cargo.toml
crates/new_project_name/src/: main.rs
new_project_name/: __init__.py
scripts/: generate_changelog.py  template_update.py
scripts/clippy_wasm/: clippy.toml
src/: main.cpp  main.rs
