[package]
authors = ["rerun.io <opensource@rerun.io>"]
categories = []                                                      # TODO: fill in if you plan on publishing the crate
description = ""                                                     # TODO: fill in if you plan on publishing the crate
edition = "2021"
homepage = "https://github.com/rerun-io/REPO_NAME"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in if you plan on publishing the crate
license = "MIT OR Apache-2.0"
name = "PROJECT_NAME"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
readme = "README.md"
repository = "https://github.com/rerun-io/REPO_NAME"
rust-version = "1.76"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true


[features]
default = []


[dependencies]


[dev-dependencies]


[patch.crates-io]
