[package]
authors.workspace = true
categories = []                                                      # TODO: fill in if you plan on publishing the crate
description = ""                                                     # TODO: fill in if you plan on publishing the crate
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in if you plan on publishing the crate
license.workspace = true
name = "new_project_name"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = []


[dependencies]


[dev-dependencies]
